syntax = "proto3";

package api.demo_temoral_project.v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/struct.proto";
import "google/api/annotations.proto";

option go_package = "demo-temporal-project/api/demo_temoral_project/v1;v1";

message PaymentDetails {
    string sourceAccount = 1;
    string targetAccount = 2;
    double amount = 3;
    string refId = 4;
}

service Transaction {

    rpc TransferMoney (PaymentDetails) returns (google.protobuf.Empty){
        option (google.api.http) = {
          post: "v1/transfer-money"
          body: "*"
        };
      }

}